# yarobot_control_unit

./: CLAUDE.md  README.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
KiCad/ya_brakeboardESP32_S3/: #auto_saved_files#  MCP.kicad_sch  _autosave-shift_registers.kicad_sch  _autosave-ya_brakeboardESP32_S3.kicad_sch  power_supply.kicad_sch  shift_registers.kicad_sch  ya_brakeboardESP32_S3.kicad_prl  ya_brakeboardESP32_S3.kicad_pro  ya_brakeboardESP32_S3.kicad_sch  (+1 more)
docs/: PROJECT-TRACKER.md  architecture.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-11-18.md  calibration-procedures.md  channel-letter-mapping.md  command-interface.md  discrete-axis-e.md  end-switch-decisions.md  epics.md  event-queue-implementation.md  freertos-task-architecture.md  gpio-allocation-7motors.md  gpio-assignment.md  homing-sequences.md  implementation-readiness-report-2025-12-02.md  motor-control-classes.md  nvs-organization.md  power-on-initialization.md  prd.md  schematics-design.md  servo-feedback-signals.md  shift-register-control.md  sprint-change-proposal-2025-12-06.md  trapezoidal-profile-implementation.md  unified-cd-stepper-control.md  validation-report-2025-11-30.md  validation-report-architecture-2025-11-29-2.md  validation-report-architecture-2025-11-29.md  yaml-configuration-system.md
examples/: IndicatorInterface.cpp
firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/control/: CMakeLists.txt
firmware/components/control/command_executor/: CMakeLists.txt  command_executor.c  enable_handler.cpp  move_handler.cpp  movr_handler.cpp  position_handler.cpp  stop_handler.cpp  test_pulse_cmd.cpp  velocity_handler.cpp
firmware/components/control/command_executor/include/: command_executor.h  enable_handler.h  move_handler.h  movr_handler.h  position_handler.h  stop_handler.h  test_pulse_cmd.h  velocity_handler.h
firmware/components/control/command_executor/test/: test_command_executor.c  test_move_handler.cpp
firmware/components/control/motion_controller/: motion_controller.cpp
firmware/components/control/motion_controller/include/: motion_controller.h
firmware/components/control/motion_controller/test/: test_motion_controller.cpp
firmware/components/control/motor_system/: motor_system.cpp
firmware/components/control/motor_system/include/: motor_system.h
firmware/components/control/motor_system/test/: test_motor_system.cpp
firmware/components/control/tasks/: task_stubs.c
firmware/components/control/tasks/include/: task_defs.h
firmware/components/events/: CMakeLists.txt
firmware/components/events/event_manager/: CMakeLists.txt  event_manager.c
firmware/components/events/event_manager/include/: event_manager.h
firmware/components/events/event_manager/test/: test_event_manager.c
firmware/components/interface/: CMakeLists.txt
firmware/components/interface/command_parser/: CMakeLists.txt  command_parser.c  response_formatter.c
firmware/components/interface/command_parser/include/: command_parser.h  response_formatter.h
firmware/components/interface/command_parser/test/: test_command_parser.c  test_response_formatter.c
firmware/components/interface/usb_cdc/: CMakeLists.txt  usb_cdc.c  usb_cdc_private.h
firmware/components/interface/usb_cdc/include/: usb_cdc.h
firmware/components/yarobot_hal/: CMakeLists.txt
firmware/components/yarobot_hal/gpio_hal/: gpio_hal.c
firmware/components/yarobot_hal/gpio_hal/include/: gpio_hal.h
firmware/components/yarobot_hal/i2c_hal/: i2c_hal.c
firmware/components/yarobot_hal/i2c_hal/include/: i2c_hal.h
firmware/components/yarobot_hal/spi_hal/: spi_hal.c
firmware/components/yarobot_hal/spi_hal/include/: spi_hal.h
firmware/main/: CMakeLists.txt  gdma_probe.cpp  idf_component.yml  yarobot_control_unit.cpp
(+144 files in other folders)
