# Interface umbrella component
# Each interface has its own subdirectory and CMakeLists.txt
# This file just ensures the component directory is recognized

# Note: ESP-IDF will automatically discover subdirectory components
# This file is a placeholder to satisfy build system requirements

idf_component_register()
